fix gap

--- a/styles/style.css
+++ b/styles/style.css
@@ -387,6 +387,7 @@ img {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 0.3fr 1fr 1fr 1fr;
+    gap: 10px;
   }
 
   .section-reduced__food {
